<resources>
    <string name="app_name">Grocery User</string>
    <string name="font_regular">fonts/Poppins-Regular.ttf</string>
    <string name="font_medium">fonts/Poppins-Medium.ttf</string>
    <string name="font_bold">fonts/Poppins-Bold.ttf</string>
    <string name="font_black">fonts/Poppins-Black.ttf</string>
    <string name="font_semibold">fonts/Poppins-SemiBold.ttf</string>
    <string name="font_thin">fonts/Poppins-SemiBold.ttf</string>
    <string name="font_light">fonts/Poppins-Light.ttf</string>
    <string name="font_extrabold">fonts/Poppins-ExtraBold.ttf</string>
    <string name="turn_flash_on_off">Turn Flash On/Off</string>
    <string name="result">Result</string>
    <string name="font_mark_web_thin">fonts/MARK_WEB_W04_BLACK.TTF</string>
    <string name="fullname">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="select_address_type">Select Address Type </string>
    <string name="adres">Address</string>
    <string name="flat_and_door">Door / Flat No.</string>
    <string name="landmark_add">Landmark</string>
    <string name="neighborHood">Pincode</string>
    <string name="logout">Are you sure to logout from this app ?</string>
    <string name="exit_screen">Sure if you wan\'t to exits this app</string>
    <string name="no_internet">No internet connection\nGo to setting and connect to network.</string>
    <string name="error_msg">Please try again something went to wrong</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="rezarpay_key">1</string>
    <string name="language_english">en</string>
    <string name="language_hindi">ar</string>
    <string name="validation_name">Please enter name</string>
    <string name="validation_date">Please enter order date</string>
    <string name="validation_email">Please enter email</string>
    <string name="validation_password">Please enter password</string>
    <string name="validation_oldpassword">Please enter old password</string>
    <string name="validation_cpassword">Please enter confirm password</string>
    <string name="validation_valid_email">Please enter valid email</string>
    <string name="validation_valid_cpassword">New password &amp; Confirm password must be same</string>
    <string name="validation_valid_password">Please enter must be minimum eight character</string>
    <string name="validation_mobile">Please enter mobile no</string>
    <string name="validation_valid_mobile">Please enter valid mobile no</string>
    <string name="validation_comment">Please enter Comment</string>
    <string name="validation_address">Please enter Address</string>
    <string name="validation_delivery_address">Enter delivery address</string>
    <string name="validation_delivery_Building_No">Door / Flat no. is required</string>
    <string name="validation_delivery_Landmark">Landmark is required</string>
    <string name="validation_pincode">Pincode is required</string>
    <string name="delivery_address">Delivery address</string>
    <string name="validation_all">Please enter all details</string>
    <string name="start">Start</string>
    <string name="skip">Skip</string>
    <string name="categories">Categories</string>
    <string name="view_all">View all</string>
    <string name="addtocart">Add to cart</string>
    <string name="message">You can not change this address in Demo version. When you\'ll purchase. it will work properly.</string>
    <string name="is_Cart_Act_home">HOME</string>
    <string name="is_Cart_Act_fav">FAVOURITE</string>
    <string name="is_Cart_Act_search">SEARCH</string>
    <string name="is_Cart_Act_catby">CATEGORY_BY_PRODUCT</string>
    <string name="is_Cart_Act_item_Detail">ITEM_DETAIL</string>
    <string name="is_item_Act_home">HOME</string>
    <string name="is_item_Act_fav">FAVOURITE</string>
    <string name="is_item_Act_search">SEARCH</string>
    <string name="is_item_Act_catby">CATEGORY_BY_PRODUCT</string>
    <string name="order_place">Order placed</string>
    <string name="order_ready">Order ready</string>
    <string name="on_the_way">Order on the way</string>
    <string name="order_delivered">Order delivered</string>
    <string name="order_cancelled_you">Order cancelled by you</string>
    <string name="order_cancelled_admin">Order cancelled by admin</string>
    <string name="landmark">Landmark :</string>
    <string name="order_place1">Order placed</string>
    <string name="order_ready1">Order ready</string>
    <string name="on_the_way1">Order on the way</string>
    <string name="order_delivered1">Order delivered</string>
    <string name="razorpay_key">rzp_test_EmLPXXBqB7eK9Z</string>
    <string name="save_address">Save Address</string>
    <string name="update_address">Update Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="new_address">New Address</string>
    <string name="building">Door / Apartment No. :</string>
    <string name="zipcode">Pincode :</string>
    <string name="select_address">Select Address</string>
    <string name="add_money">Add Money</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="invalid_key">invalid google map key</string>
    <string name="pincode_not_found">PinCode Not Found</string>
    <string name="empty_amount">Please enter the amount.</string>
    <string name="valid_amount">Please enter the valid amount value.</string>
    <string name="payment_option_error">Please select any payment option</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="razorpay_payment">Razorpay Payment</string>
    <string name="stripe_payment">Stripe Payment</string>
    <string name="remove_cart">Are you sure to remove this item from your cart list?</string>
    <string name="maximum_allowed">Maximum quantity allowed</string>
    <string name="delete_alert">Are you sure you want to delete this address?</string>
    <string name="max_limit">You\'ve reached the maximum units allowed for the purchase of this item</string>
    <string name="ref_earning">Referral Earning</string>
    <string name="wallet_recharge">Wallet Recharge</string>
    <string name="wallet_deduction">Wallet Deduction</string>
    <string name="admin_recharge">By Admin</string>
    <string name="razorpay">RazorPay</string>
    <string name="stripe">Stripe</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_cancel_desc">Are you sure to cancel this order? If yes, then order amount (Online payment OR Wallet payment) will be transferred to your wallet.</string>
    <string name="payment_amount_issue">Your have don\'t have sufficient amount in your wallet to place this order.please select another payment option</string>
    <string name="terms_condition_error"><![CDATA[Please select terms & conditions]]></string>
    <string name="apply_">Apply</string>
    <string name="fev_list_alert">Are you sure to remove this product from your favourite list ?</string>
    <string name="wallet_payment">Wallet Payment</string>
    <string name="amount">Amount (Ex. : 10.00)</string>
    <string name="proceed">Proceed</string>
    <string name="no_data_found">No data found</string>
    <string name="checkout">Checkout</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="old_password">Old password</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset">Reset</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favourites">Favourites</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="email_address">Email Address</string>
    <string name="user_name">User Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="save">Save</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_registered_email_address_below_n_we_will_send_new_password_in_your_email">Enter your registered email address below. \n We will send new password in your email.</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="my_address">MY Address</string>
    <string name="weight">Weight</string>
    <string name="select_variation">Select Variation</string>
    <string name="description">Description</string>
    <string name="product_information">Product information</string>
    <string name="brand_">Brand :</string>
    <string name="manufacturer">Manufacturer :</string>
    <string name="country_of_origin">Country of origin :</string>
    <string name="ingredient_type">Ingredient type :</string>
    <string name="related_products">Related Products</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="delivery_address_">DELIVERY ADDRESS:</string>
    <string name="order_number_">ORDER NUMBER :</string>
    <string name="get">GET</string>
    <string name="copy">Copy</string>
    <string name="qty_">Qty :</string>
    <string name="type_">Type :</string>
    <string name="order_id_">Order id :</string>
    <string name="latest_products">Latest Products</string>
    <string name="explore_products">Explore Products</string>
    <string name="edit_profile_">Edit profile</string>
    <string name="change_password_">Change password</string>
    <string name="manage_addresses">Manage Addresses</string>
    <string name="ratings_amp_reviews_"><![CDATA[Ratings & Reviews]]></string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="select_layout_">Select layout</string>
    <string name="ltr">LTR</string>
    <string name="rtl">RTL</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="about_us">About us</string>
    <string name="favourite_list">FAVOURITE LIST</string>
    <string name="enter_your_review">Enter your review</string>
    <string name="cancel">Cancel</string>
    <string name="ok">ok</string>
    <string name="card_information">Card information</string>
    <string name="no_promo_code_found">No Promo Code Found</string>
    <string name="select_pincode">Select PinCode</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="set_image_form_gallery">Set Image form Gallery</string>
    <string name="set_image_form_camera">Set Image form Camera</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="full_name">Full name</string>
    <string name="mobile">Mobile</string>
    <string name="referral_code_optional">Referral code (Optional)</string>
    <string name="password">Password</string>
    <string name="i_accept_the_terms_amp_conditions"><![CDATA[I accept the terms & conditions]]></string>
    <string name="signup">Signup</string>
    <string name="skip_amp_continue"><![CDATA[Skip & Continue]]></string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="signup_to_get_started">Signup to get started!</string>
    <string name="cart">CART</string>
    <string name="payment">PAYMENT</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="payment_desc">Choose desired payment type to pay for this order.\nWe offer multiple payment options.</string>
    <string name="order_now">Order now</string>
</resources>