<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_gray">

    <RelativeLayout
        android:id="@+id/rlTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:onClick="onClick"
            android:padding="@dimen/_6sdp"
            android:textDirection="locale"
            android:src="@drawable/ic_back"
            app:tint="@color/black" />

        <TextView
            fontPath="@string/font_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/payment"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:textDirection="locale"
            android:textAlignment="center"
            tools:ignore="MissingPrefix" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tvTitleOrderSummery"
        fontPath="@string/font_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlTitle"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/select_payment_method"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textDirection="locale"
        android:textAlignment="viewStart"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/tvTitleOrderDetail"
        fontPath="@string/font_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitleOrderSummery"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_7sdp"
        android:textDirection="locale"
        android:textAlignment="viewStart"
        android:text="@string/payment_desc"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        tools:ignore="MissingPrefix" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_above="@+id/tvPaynow"
        android:layout_below="@id/tvTitleOrderDetail"
        android:id="@+id/rvPayment"/>


    <TextView
        android:id="@+id/tvPaynow"
        fontPath="@string/font_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:onClick="onClick"
        android:padding="@dimen/_10sdp"
        android:text="@string/order_now"
        android:textColor="@color/white"
        android:textDirection="locale"
        android:textAlignment="center"
        android:textSize="@dimen/_12ssp"
        tools:ignore="MissingPrefix" />
</RelativeLayout>