<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlTitle"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:onClick="onClick"
            android:layout_centerVertical="true"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_back"
            />

        <TextView
            fontPath="@string/font_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cart"
            android:textColor="@color/black"
            android:textDirection="locale"
            android:textSize="@dimen/_14ssp"
            tools:ignore="MissingPrefix" />

        <ImageView
            android:id="@+id/ivHome"
            android:layout_width="@dimen/_32sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/_8sdp"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/bg_green_corner_10"
            android:src="@drawable/ic_home"
            app:tint="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlTitle"
        android:layout_above="@id/tvCheckout"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCartFood"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvNoDataFound"
            fontPath="@string/font_regular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_data_found"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12ssp"
            android:textDirection="locale"
            android:visibility="gone"
            tools:ignore="MissingPrefix" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_38sdp"
        android:background="@color/colorPrimary"
        fontPath="@string/font_bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/checkout"
        android:onClick="onClick"
        android:id="@+id/tvCheckout"
        android:textDirection="locale"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_5sdp"
        tools:ignore="MissingPrefix" />

</RelativeLayout>