<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/app_bg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            fontPath="@string/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="@string/font_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:textDirection="locale"
            android:textAlignment="viewStart"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="@string/font_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_minus4sdp"
            android:onClick="onClick"
            android:text="@string/signup_to_get_started"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:textDirection="anyRtl"
            android:textAlignment="viewStart"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/edFullName"
            fontPath="@string/font_regular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:background="@drawable/bg_white_10"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textDirection="locale"
            android:textAlignment="viewStart"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:singleLine="true"
            android:textSize="@dimen/_10ssp"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/edEmail"
            fontPath="@string/font_regular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:background="@drawable/bg_white_10"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_10sdp"
            android:textDirection="locale"
            android:textAlignment="viewStart"
            android:paddingEnd="@dimen/_10sdp"
            android:singleLine="true"
            android:textSize="@dimen/_10ssp"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/edMobileNo"
            fontPath="@string/font_regular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:background="@drawable/bg_white_10"
            android:hint="@string/mobile"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="10"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textDirection="locale"
            android:textAlignment="viewStart"
            android:singleLine="true"
            android:textSize="@dimen/_10ssp"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/edRefralCode"
            fontPath="@string/font_regular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_7sdp"
            android:background="@drawable/bg_white_10"
            android:hint="@string/referral_code_optional"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:singleLine="true"
            android:textSize="@dimen/_10ssp"
            android:textDirection="locale"
            android:textAlignment="viewStart"
            tools:ignore="MissingPrefix" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edEmail"
            android:layout_gravity="center|end"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <EditText
                android:id="@+id/edPassword"
                fontPath="@string/font_regular"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@id/edEmail"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/bg_white_10"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textSize="@dimen/_10ssp"
                android:textDirection="locale"
                android:textAlignment="viewStart"
                tools:ignore="MissingPrefix" />
        </com.google.android.material.textfield.TextInputLayout>



        <LinearLayout
            android:id="@+id/llCheck"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbCheck"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:buttonTint="@color/black"
                android:gravity="center" />

            <TextView
                android:id="@+id/tvTermsAndCondition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:gravity="center_vertical|start"
                android:textDirection="locale"
                android:textAlignment="viewStart"
                android:text="@string/i_accept_the_terms_amp_conditions"
                android:textColor="@color/black" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvSignUp"
            fontPath="@string/font_semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_green_corner_10"
            android:gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/signup"
            android:textDirection="locale"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/tvSkipAndLogin"
            fontPath="@string/font_semibold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center_horizontal"
            android:padding="@dimen/_10sdp"
            android:text="@string/skip_amp_continue"
            android:textColor="@color/black"
            android:textDirection="locale"
            android:textAlignment="center"
            android:textSize="@dimen/_12ssp"
            tools:ignore="MissingPrefix" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <TextView
            fontPath="@string/font_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp"
            android:textDirection="locale"
            android:textAlignment="center"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/tvLogin"
            fontPath="@string/font_semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textDirection="locale"
            android:textAlignment="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            tools:ignore="MissingPrefix" />
    </LinearLayout>

</RelativeLayout>