<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back_gray"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/rlToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:layout_centerInParent="true"
            fontPath="@string/font_semibold"
            android:text="@string/my_orders"
            android:textDirection="locale"
            android:textAllCaps="true"
            android:textAlignment="center"
            tools:ignore="MissingPrefix" />
    </RelativeLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvNoDataFound"
                fontPath="@string/font_bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_data_found"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12ssp"
                android:visibility="gone"
                tools:ignore="MissingPrefix" />
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rvOrderHistory"
                tools:listitem="@layout/row_orderdelivery"
                android:visibility="visible"/>
        </RelativeLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>