<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back_gray"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:id="@+id/rlToolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_back"
            android:id="@+id/ivBack"
            android:layout_centerVertical="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            android:layout_centerInParent="true"
            fontPath="@string/font_semibold"
            android:text="@string/categories"
            android:textAllCaps="true"
            android:textDirection="locale"
            tools:ignore="MissingPrefix" />
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvNoDataFound"
                fontPath="@string/font_bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_data_found"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12ssp"
                android:visibility="visible"
                android:textDirection="locale"
                tools:ignore="MissingPrefix" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/rvCategory"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:visibility="gone"/>
        </RelativeLayout>
</LinearLayout>